Fix long-standing layout issue with router-outlet

--- a/field-trainer/field-trainer/src/styles.css
+++ b/field-trainer/field-trainer/src/styles.css
@@ -10,9 +10,19 @@ body,
     width: 100%;
     height: 100%;
     margin: 0;
-    background: black;
 }
 
 .ft-page-header {
     margin-left: 0.5em;
+}
+
+.ps > .ps__rail-x,
+.ps > .ps__rail-y {
+    opacity: 0.6;
+}
+
+router-outlet.router-flex + * {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
 }
